--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www & node apiServer.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "^4.16.2",
+    "http-proxy": "^1.16.2",
     "jade": "~1.11.0",
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
@@ -29,7 +30,7 @@
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.12.5",
     "redux-logger": "^3.0.6",
     "webpack": "^3.9.1"
   }
